# SubscribeCheckerBot

./: .env.dev.example  .gitignore  Dockerfile  LICENSE.txt  README.md  docker-compose.yaml  pyproject.toml
sub-checkerBot/: .env.template  alembic.ini  main.py  middleware.py
sub-checkerBot/alembic/versions/: 25_1923_28_c37532e875e6_create_expires_fields_in_subscription_.py
sub-checkerBot/callbacks/: admin_broadcast_callbackdata.py  admin_callback_text.py  admin_tariff_callbackdata.py  admin_user.py  tariff_callbackdata.py
sub-checkerBot/core/: bot_instance.py  config.py  constants.py  exceptions.py  logging_config.py  scheduler.py  tariff.py  text.py
sub-checkerBot/core/models/: __init__.py  base.py  db_helper.py  subscriptions.py  tariff.py  user.py
sub-checkerBot/handlers/: __init__.py  helpers.py  start.py  subscription.py
sub-checkerBot/handlers/admin/: __init__.py  admin.py  helpers.py
sub-checkerBot/handlers/buy_subscription/: __init__.py  buy_subscription.py  helpers.py  states.py
sub-checkerBot/handlers/check_subscription/: __init__.py  check_sub.py  helpers.py  messages.py
sub-checkerBot/keyboards/: admin_broadcast_keyboard.py  admin_callback_text.py  admin_main_menu.py  admin_tariffs_keyboard.py  admin_users_keyboard.py  callback_text.py  payment_keyboard.py  renew_sub_keyboard.py  start_keyboard.py  tariff_keyboard.py
sub-checkerBot/keyboards/tariff_keyboard/: format_helpers.py  (+1 more)
sub-checkerBot/services/: __init__.py  admin_broadcast.py  admin_tariffs.py  admin_users.py  sub_add.py  sub_add_and_check.py  sub_check.py  user_check_sub.py
(+13 files in other folders)
