[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12, <3.15"
aiogram = "^3.24.0"
pydantic-settings = "^2.12.0"
sqlalchemy = "^2.0.46"
asyncpg = "^0.31.0"
apscheduler = "^3.11.2"
redis = "^7.2.0"
alembic = "^1.18.4"

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)"
]
